Hamburger is positioned correct and only show on mobile. Naviagtion for desktop got background color. Profile img is showing.

--- a/src/components/Hamburger.css
+++ b/src/components/Hamburger.css
@@ -4,7 +4,8 @@
   display: flex;
   justify-content: space-around;
   flex-flow: column nowrap;
-  z-index: 10;
+  z-index: 10; 
+ 
 }
 
 .burger{
@@ -14,4 +15,20 @@
   background-color: #191919;
   transform-origin: 1px;
   transition: all 0.3s linear;
+ 
 }
+
+/* Animation when open */
+.hamburger.open .burger1 {
+  transform: rotate(45deg);
+}
+
+.hamburger.open .burger2 {
+  transform: translateX(100%);
+  opacity: 0;
+}
+
+.hamburger.open .burger3 {
+  transform: rotate(-45deg);
+}
+
