--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -1,47 +1,54 @@
 .navigation{
- width: 100%;
- height: 50px;
- background-color: white;
-}
-
-.navigation ul{
-  display: flex;
-  flex-wrap: wrap;
-  float: right;
-  margin: 20 0px;
-  padding: 0 25px;
-}
-
- /* <style jsx>{` 
-      .navigation ul{
-        display: ${hamburgerOpen ? "inline" : "none"};
-        background: #191919;
-        height: 100vh;
-        width: 50vw;        
-        margin-top: 50px;
-        position: absolute;
-        }
-        `}</style> */
-
-.navigation ul li{
-  list-style: none;
-  padding-right: 10px;
+  display: none;
 }
 
 .hamburger{
-  display: fixed;
+  position: static;
+  /* display: block; */
   padding-top: 10px;
   margin-left: 10px;
-  z-index: 10;
+  /* z-index: 10; */
   }
+
+  .navigation-ul.open{
+    display: none;
+    background: #191919;
+    color: white;
+    height: 100vh;
+    width: 50vw;        
+    margin-top: 50px;
+    position: absolute;
+    } 
 
 
 /* Desktop Widescreen*/
-@media (min-with: 768px){
+@media (min-width: 768px){  
+
+  .navigation{
+    display: block;
+    width: 100%;
+    height: 50px;
+    background-color: #191919;
+    color: white;
+   }
+
+   .navigation ul{
+    display: flex;
+    flex-wrap: wrap;
+    float: right;
+    margin: 20px 0px;
+    padding: 0 25px;
+  } 
+  
+  .navigation ul li{
+    list-style: none;
+    padding-right: 10px;
+  }
 
   .hamburger{
     display: none;
   }
+
 
   
 }
